# object_anomaly_detection

./: .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  package.xml
docs/html/: graph_legend.html  index.html
docs/latex/: refman.tex
include/object_anomaly_detection/: circle.hpp  moveRobot.hpp
include/voadrs/: circle.hpp  dataFetch.hpp  dataReader.hpp  imageConvert.hpp  listener.hpp  scan.hpp
launch/: measure.launch  voadrs.launch
meshes/: measure_1_.STL  measure_2_.STL  measure_3_.STL  measure_4.dae  measure_4_.STL  robot_rest.STL  table.STL
results/: cppcheck.txt  cpplint.txt
src/: circle.cpp  cvInspect.cpp  dataReader.cpp  imageConvert.cpp  measure.txt  moveRobot.cpp
test/: level1.test  level1Tests.test  level2Tests.test
test/level1/: circleTest.cpp  dataReaderTest.cpp  main.cpp  moveRobotTest.cpp  test.txt
test/level2/: imageConvertTest.cpp  main.cpp  test.cpp
urdf/: measure_1.urdf  measure_2.urdf  measure_3.urdf  measure_4.urdf  robot_rest.urdf  table.urdf  ur5.urdf.xacro
